# ai_ufaz

./: README.md
decision_tree/: README.md
decision_tree/python/: tree.py
iris/decisionTree/: DecisionTree.java  Group.java  Test.java  Util.java
iris/decision_tree/: tree.py
k_means/: README.md
k_means/cpp/: CMakeLists.txt
k_means/cpp/inc/: k_means.cpp  k_means.h  utils.cpp  utils.h
k_means/cpp/src/: main.cpp
k_means/python/: k_means.py
nn/cpp/inc/: matrix.cpp  matrix.h
